# Git-Gud

./: .coverage  .gitignore  HACKATHON_SUMMARY.md  PHASE2_IMPLEMENTATION.md  README.md  VALIDATION_RESULTS.md  final_validation.bat  final_validation.sh  generate_gif.bat  generate_gif.sh  pyproject.toml  requirements.txt  validation_test.py
.github/workflows/: publish-to-pypi.yml
.kiro/specs/git-gud/: design.md  requirements.md  tasks.md
.kiro/specs/git-sensei/: design.md  requirements.md  tasks.md
git_gud/: __init__.py  ai.py  cli.py  config.py  git_ops.py  safety.py
git_gud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_cli.py  test_config.py  test_git_ops.py  test_integration.py  test_phase2_integration.py  test_safety.py
